pagina de login atualizada

--- a/index.html
+++ b/index.html
@@ -1,18 +1,25 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Michroma&family=Poppins:wght@300;400;500;600&display=swap"
+        rel="stylesheet">
     <title>Home</title>
 </head>
+
 <body>
 
     <h1>Home</h1>
 
-<div class="login">
-<a href="login.html">Login</a>
-</div>
+    <div class="login">
+        <a href="login.html">Login</a>
+    </div>
 
-    
+
 </body>
+
 </html>
