--- a/login.html
+++ b/login.html
@@ -4,9 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel="stylesheet">
-   <link rel="stylesheet" href="style.css">
-   <title>Login</title>
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Michroma&family=Poppins:wght@300;400;500;600&display=swap"
+        rel="stylesheet">
+    <title>Login</title>
 </head>
 
 <body>
@@ -24,17 +28,15 @@
             </div>
 
             <div class="remember-forgot">
-                <label>
-                <input type="checkbox">
-                Lembrar minha senha
-                </label>
                 <a href="#">Esqueci minha senha</a>
             </div>
-                 <button type="submit">Entrar</button>
 
-                 <div class="register-link">
-                    <p>Não tem uma conta ? <a href="#">Cadastre-se</a></p>
-                 </div>
+            <button type="submit" class="submit">Entrar</button>
+           
+
+            <div class="register-link">
+                <p>Não tem uma conta ?   <a href="#">Cadastre-se</a></p>
+            </div>
 
         </form>
     </main>
